# QzEmoji

./: .gitignore  .pre-commit-config.yaml  .tokeignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: auto-pr.yml  build-db.yml  build.yml  ci.yml  codeql-analysis.yml  python-app.yml  test.yml
data/: emoji.db  emoji.hash.db  emoji.yml
data/raw/: emoji.yaml  qq_face.yaml
script/: build.py  check.py
src/qzemoji/: VERSION  __init__.py  __init__.pyi  base.py  collect.py  emojitable.py  finddb.py  orm.py  sql.py  utils.py
src/qzemoji/hash/: __init__.py  download.py
test/: test_block.py  test_build.py  test_dec.py  test_table.py
