[tool.poetry]
name = "qzemoji"
version = "4.2.0.dev2"
description = "Translate Qzone emoji link to text."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aioqzone/QzEmoji"
repository = "https://github.com/aioqzone/QzEmoji"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = {version = "^2.0.0rc3", extras=["asyncio", "aiosqlite"]}
assetsupdater = "^1.6.0"
PyYAML = "^6.0"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "~0.20.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.extras]
dev = ["pre-commit", "black", "isort"]

[[tool.poetry.source]]
name = "aioqzone-index"
url = "https://aioqzone.github.io/aioqzone-index/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
log_cli = 1
log_cli_level = 'WARNING'

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py37']
