[tool.poetry]
name = "qzemoji"
version = "6.0.4"
description = "Translate Qzone emoji link to text."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aioqzone/QzEmoji"
repository = "https://github.com/aioqzone/QzEmoji"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8"
aiofiles = "^23.1"
SQLAlchemy = { version = "^2.0", extras = ["asyncio", "aiosqlite"] }
PyYAML = "^6.0"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-asyncio = ">=0.21,<0.24,!=0.22.*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "*"
isort = ">=5.13.1"


[[tool.poetry.source]]
name = "aioqzone-index"
url = "https://aioqzone.github.io/aioqzone-index/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
log_cli = 1
log_cli_level = 'WARNING'

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py38']
