[metadata]
name = QzEmoji
version = file: src/qzemoji/VERSION
description = Translate Qzone emoji to text
license = MIT
license_files = LICENSE
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/QzEmoji

[options]
python_requires = >=3.9
package_dir =
    = src
    qzemoji.data = data
packages = find:
include_package_data = True
install_requires = 
    PyYaml
    aiohttp
    aiofiles
    opencv-python-headless
    sqlmodel
    AssetsUpdater @ git+https://github.com/JamzumSum/AssetsUpdater.git
tests_require =
    pytest

[options.packages.find]
where=src
