[metadata]
name = QzEmoji
version = file: src/qzemoji/VERSION
description = Translate Qzone emoji to text
license = MIT
license_files = LICENSE
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/QzEmoji

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    sqlalchemy[asyncio]
    aiosqlite
    AssetsUpdater[async] @ git+https://github.com/JamzumSum/AssetsUpdater.git@0.2.1
tests_require =
    pytest
    pytest-asyncio

[options.packages.find]
where=src

[options.extras_require]
build=
    PyYaml
